# backend

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  get_root_metrics.py  manage.py  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  release-draft.yml
frontend/: Dockerfile  Dockerfile.dev  vite.config.js
frontend/src/: App.jsx  theme.js
processing/: admin.py  models.py  permissions.py  routers.py  serializers.py  services.py  urls.py  views.py
processing/migrations/: 0001_initial.py  0002_alter_model_model_type.py  0002_mask_average_root_diameter_mask_root_count_and_more.py  0003_alter_model_model_type.py  0003_model.py  0004_alter_model_model_type.py  0005_alter_model_model_type.py  0005_model_owner_model_public_alter_model_model_type.py  0006_alter_model_model_type.py  0007_alter_model_model_type.py  0008_alter_model_model_type.py  0009_alter_model_model_type.py  0010_alter_model_model_type.py  0011_alter_model_model_type.py  0012_alter_model_model_type.py  0013_alter_model_model_type.py  0014_alter_model_model_type.py
rhizotron/: asgi.py  urls.py  wsgi.py
rhizotron/settings/: __init__.py  defaults.py  docker.py  local.py  prod.py  test.py
segmentation/: __init__.py
segmentation/data/: data_module.py  dataset_types.py  labelme.py  prmi.py
segmentation/models/: __init__.py  lightning.py  metrics.py  model_types.py  resnet.py  unet.py
segmentation/utils/: file_management.py  masks.py  multi_image_output.py  predict.py  (+2 more)
(+34 files in other folders)
